--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -21,7 +21,8 @@ jobs:
 
     steps:
       - name: pruebas
-        run: pwd
+        run: |
+          pwd
           ls -al
           whoami
           ls
