--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -8,6 +8,12 @@ jobs:
     steps:
       - name: Hola Mundo
         run: echo "Hola Mundo"
+      - name: touch file
+        run: touch hola.txt
+      - name: Set text
+        run: echo "Hola Mundo" >> hola.txt
+      - name: Read File
+        run: cat hola.txt
 
   other:
     runs-on: ubuntu-latest
@@ -24,3 +30,4 @@ jobs:
         run: |
           pwd
           ls -al
+          whoami
