--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -17,14 +17,14 @@ jobs:
 
   other:
     runs-on: ubuntu-latest
-
+    needs: [hola]
     steps:
       - name: LS
         run: ls -al
 
   my-own-proof:
     runs-on: ubuntu-latest
-
+    needs: [other]
     steps:
       - name: pruebas
         run: |
